--- a/public/404.html
+++ b/public/404.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
-    <title>重定向中...</title>
-    <script>
-        sessionStorage.redirect = location.href;
+    <title>Stock Tracker</title>
+    <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
     </script>
-    <meta http-equiv="refresh" content="0;URL='/'">
-</head>
-<body>
-</body>
+  </head>
+  <body>
+    <script>
+      const segmentCount = 1;
+      const location = window.location;
+      const repo = '/haizi';
+      const l = location.pathname.split('/').slice(0, 1 + segmentCount).join('/') + repo;
+      location.replace(
+        `${location.protocol}//${location.hostname}` +
+        (location.port ? ':' + location.port : '') +
+        l + '/?p=/' +
+        location.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
+        (location.search ? '&q=' + location.search.slice(1).replace(/&/g, '~and~') : '') +
+        location.hash
+      );
+    </script>
+  </body>
 </html>
 
